unpackaged/main/default/objects/OrderApi__Receipt_Line__c/OrderApi__Receipt_Line__c.object-meta.xml
<CustomObject>
    <description>Receipt Lines apply cash related to either refunds or payments to Invoices or Items.</description>
    <label>Receipt Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receipt Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>