unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/Legacy_Receipt_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Receipt_Line_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Receipt Line ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>