unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Auto_Calculate_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>** System Calculated Override ** Valid if the Receipt Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
    <inlineHelpText>** System Calculated Override ** Valid if the Receipt Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
    <label>Auto Calculate Activation Date</label>
    <type>Checkbox</type>
</CustomField>