unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Calculate_Shipping_Details__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default checked. Copies the shipping information from the receipt.</description>
    <inlineHelpText>Default checked. Copies the shipping information from the receipt.</inlineHelpText>
    <label>Calculate Shipping Details</label>
    <type>Checkbox</type>
</CustomField>