unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__EPayment_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related ePayment Line.</description>
    <inlineHelpText>**System Calculated** Link to related ePayment Line.</inlineHelpText>
    <label>EPayment Line</label>
    <referenceTo>OrderApi__EPayment_Line__c</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>