unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Invoice that the customer is paying.</description>
    <inlineHelpText>Link to related Invoice that the customer is paying.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipLabel>Payments &amp; Refunds</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>