unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Invoice_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Balance_Due__c</fullName>
    <description>**System Calculated** The balance due for the linked Invoice (if applicable).</description>
    <formula>OrderApi__Invoice__r.OrderApi__Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** The balance due for the linked Invoice (if applicable).</inlineHelpText>
    <label>Invoice Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>