unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Invoice_Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Customer_Link__c</fullName>
    <description>**System Calculated** The customer for the linked Invoice (if applicable).</description>
    <formula>OrderApi__Invoice__r.OrderApi__Customer_Link__c</formula>
    <inlineHelpText>**System Calculated** The customer for the linked Invoice (if applicable).</inlineHelpText>
    <label>Invoice Customer</label>
    <type>Text</type>
</CustomField>