unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Due_Date__c</fullName>
    <description>**System Calculated** The due date for the linked Invoice (if applicable).</description>
    <formula>OrderApi__Invoice__r.OrderApi__Due_Date__c</formula>
    <inlineHelpText>**System Calculated** The due date for the linked Invoice (if applicable).</inlineHelpText>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>