unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the receipt line to the invoice line.</description>
    <inlineHelpText>Relates the receipt line to the invoice line.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>