unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Is_Refund__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Refund__c</fullName>
    <description>**System Calculated** Checked when the parent Receipt is a &quot;Refund&quot;</description>
    <formula>ISPICKVAL(OrderApi__Receipt__r.OrderApi__Type__c,&quot;Refund&quot;)</formula>
    <inlineHelpText>**System Calculated** Checked when the parent Receipt is a &quot;Refund&quot;</inlineHelpText>
    <label>Is Refund</label>
    <type>Checkbox</type>
</CustomField>