unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Is_Shipping_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the Receipt Line that is being used for shipping.</description>
    <inlineHelpText>Defines the Receipt Line that is being used for shipping.</inlineHelpText>
    <label>Is Shipping Rate</label>
    <type>Checkbox</type>
</CustomField>