unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to related Item.</description>
    <inlineHelpText>**Required** Link to related Item.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>