unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Name__c</fullName>
    <description>The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Display Name&quot; field.</description>
    <inlineHelpText>The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Display Name&quot; field.</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>