unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Description__c</fullName>
    <description>**System Calculated/Override** The line description by default populates with general information from either the linked Item or the linked Invoice.</description>
    <inlineHelpText>**System Calculated/Override** The line description by default populates with general information from either the linked Item or the linked Invoice.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>