unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Parent_Foreign_Key__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Foreign_Key__c</fullName>
    <description>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</description>
    <externalId>true</externalId>
    <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>