unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to related Price Rule applied for the related Item.</description>
    <inlineHelpText>**System Calculated/Override** Link to related Price Rule applied for the related Item.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>OrderApi__Price_Rule__c</referenceTo>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>