unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>**Required** Quantity of Items. Default 1.</description>
    <inlineHelpText>**Required** Quantity of Items. Default 1.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>