unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt__c</fullName>
    <description>**Required** All Receipt details require a parent receipt that summarizes all receipt lines.</description>
    <inlineHelpText>**Required** All Receipt details require a parent receipt that summarizes all receipt lines.</inlineHelpText>
    <label>Receipt</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipName>Receipt_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>