unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Receipt_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related parent Receipt Line.</description>
    <inlineHelpText>Link to related parent Receipt Line.</inlineHelpText>
    <label>Parent Receipt Line</label>
    <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
    <relationshipLabel>Packaged Items</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>