unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Receipt_Line_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the functional Receipt Line to the reporting Receipt Line when Fonteva&#39;s multi-currency is enabled.</description>
    <inlineHelpText>Relates the functional Receipt Line to the reporting Receipt Line when Fonteva&#39;s multi-currency is enabled.</inlineHelpText>
    <label>Receipt Line (R)</label>
    <referenceTo>OrderApi__Receipt_Line_R__c</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>