unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Country__c</fullName>
    <description>Optional shipping country for the item&#39;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&#39;s &quot;Shipping Country&quot; field.</description>
    <inlineHelpText>Optional shipping country for the item&#39;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&#39;s &quot;Shipping Country&quot; field.</inlineHelpText>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>