unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subtotal__c</fullName>
    <description>**System Calculated** Sale Price * Quantity</description>
    <formula>OrderApi__Sale_Price__c * OrderApi__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Sale Price * Quantity</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>