unpackaged/main/default/objects/OrderApi__Receipt_Line__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**Required** Total amount for the Receipt Line. Default is 0.00.</description>
    <inlineHelpText>**Required** Total amount for the Receipt Line. Default is 0.00.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>